--- a/src/app/components/hero/social-hero/social-hero.component.scss
+++ b/src/app/components/hero/social-hero/social-hero.component.scss
@@ -1,6 +1,6 @@
 .social-hero {
   position: absolute;
-  top: 555px;
+  bottom: 100px;
   display: flex;
   flex-direction: column;
   gap: 20px;
